#2196 Embrace Guava's ImmutableList in the AST nodes for conditions